--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,18 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+####
+
+*.tag
+*.ppx
+
+svkl_wh_message/output/x86/*.obj
+svkl_wh_message/output/x86/*.exp
+svkl_wh_message/output/x86/*.lib
+
+svkl_wh_message/output/x64/*.obj
+svkl_wh_message/output/x64/*.exp
+svkl_wh_message/output/x64/*.lib
+
+
